--- a/index.html
+++ b/index.html
@@ -15,11 +15,25 @@
 
       <!--For search history responsiveness-->
       <style>
+body {
+    background: url("https://www.wallpapertip.com/wmimgs/173-1739030_wallpaper-hd-cloudy-weather-unique-hd-wallpapers-hd.jpg");
+    content: "";
+    border: 6px solid #fdfdfd;
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 70%;
+}
+
         .search-entry:hover {
           cursor: pointer;
           text-decoration: underline;
         }
         @media only screen and (min-width: 992px) {
+ 
           #dashboard {
             flex-grow: 1;
           }
