--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
         <div class="col p-0">
           <div class="jumbotron jumbotron-fluid py-1 mb-0 bg-dark">
             <div class="container-fluid">
-              <h1 class="text-center text-light">Pinay's Weather Dashboard</h1>
+              <h1 class="text-center text-light">Weather Dashboard</h1>
             </div>
           </div>
         </div>
